testdata/baselines/reference/submodule/conformance/FunctionDeclaration3_es6.errors.txt
FunctionDeclaration3_es6.ts(1,12): error TS7022: 'yield' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
FunctionDeclaration3_es6.ts(1,20): error TS2372: Parameter 'yield' cannot reference itself.


==== FunctionDeclaration3_es6.ts (2 errors) ====
    function f(yield = yield) {
               ~~~~~~~~~~~~~
!!! error TS7022: 'yield' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                       ~~~~~
!!! error TS2372: Parameter 'yield' cannot reference itself.
    }